Fix header font size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,7 @@ footer {
  * Responsive behaviour
  */
 @media screen and (max-width: 25em) {
-  .header {
+  header {
     font-size: 75%;
   }
 
